--- a/public/css/sidebar/style.css
+++ b/public/css/sidebar/style.css
@@ -3,6 +3,7 @@
     top:0;
     left:0;
     width:300px;
+    height:100vh;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -11,11 +12,15 @@
 
 .logo{
     width:80%;
+    height:100px;
     margin:10px auto;
+    border-radius:5px;
+    border:2px solid lightblue;;
 }
 
 .logo-img{
-    width:100%;
-    height:100%;
+    width:90%;
+    height:90%;
+    margin:auto;
     object-fit: cover;
 }
