--- a/public/css/sidebar/style.css
+++ b/public/css/sidebar/style.css
@@ -15,7 +15,7 @@
     height:100px;
     margin:10px auto;
     border-radius:5px;
-    border:2px solid aqua;;
+    border:2px solid aqua;
 }
 
 .logo-img{
