--- a/public/css/sidebar/style.css
+++ b/public/css/sidebar/style.css
@@ -2,8 +2,8 @@
     position:relative;
     top:0;
     left:0;
-    width:300px;
-    height:100vh;
+    width:100%;
+    height:100%;
     display:flex;
     flex-direction: column;
     background-color:#232222;
@@ -45,6 +45,7 @@
     color:white;
     padding:10px;
     width:100%;
+    cursor:pointer;
 }
 
 .social-item:hover{
