--- a/public/css/header/style.css
+++ b/public/css/header/style.css
@@ -1,7 +1,7 @@
 .header{
     width:100%;
     height:80px;
-    background-color:aqua;
+    background-color:#232222;
     display:flex;
     justify-content: flex-end;
     align-items: center;
@@ -10,11 +10,11 @@
 .profile{
     width:50px;
     height:50px;
-    border-radius:50%;
     margin-right:50px;
 }
 .profile-img{
     width:100%;
     height:100%;
     object-fit: contain;
+    border-radius:50%;
 }
