--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -19,6 +19,13 @@
     width:100%;
     height:50%;
     border-radius:0 0 10px 10px;
-    border:1px solid aqua;
-    color:black
+    border:2px solid #232222;
+    color:black;
+}
+.profile-img{
+    width:40px;
+    height:40px;
+    border:none;
+    border-radius:50%;
+    object-fit:cover;
 }
