--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -1,6 +1,7 @@
 .list-friends{
-    display:flex;
-    align-items:center;
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-gap:5px;
 }
 .friend-item{
     margin:10px;
