--- a/public/css/search-input/style.css
+++ b/public/css/search-input/style.css
@@ -1,11 +1,9 @@
 .search-container{
     width:300px;
-
-
     height: 40px;
     margin: 20px 0 0 20px;
     border:0.2px solid lightblue;
-    background-color:#232222;
+    background:none;
     display: flex;
     align-items: center;
     position:relative;
@@ -18,12 +16,13 @@
     cursor: pointer;
     color:white;
 }
-.search-bar
+#search-bar
 {
     width: 100%;
     height: 100%;
     border: none;
-    background-color:#232222;
+    outline:none;
+    background:none;
     outline:none;
     color:white;
 }
