--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -5,8 +5,8 @@
 }
 .friend-item{
     margin:10px;
-    width:200px;
-    height:170px;
+    width:120px;
+    height:160px;
     color:white;
 }
 .item-header{
@@ -24,12 +24,13 @@
     border:2px solid #232222;
     color:black;
     display:flex;
+    flex-direction: column;
     align-items:center;
     justify-content: center;
 }
 .profile-img{
     position:absolute;
-    bottom:0;
+    bottom:-20px;
     left:45%;
     width:40px;
     height:40px;
