--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -18,6 +18,7 @@
     position:relative;
 }
 .item-footer{
+    margin-top:30px;
     width:100%;
     height:50%;
     border-radius:0 0 10px 10px;
@@ -26,12 +27,12 @@
     display:flex;
     flex-direction: column;
     align-items:center;
-    justify-content: center;
+    justify-content: space-between;
 }
 .profile-img{
     position:absolute;
     bottom:-20px;
-    left:45%;
+    left:40%;
     width:40px;
     height:40px;
     border:none;
