--- a/public/css/header/style.css
+++ b/public/css/header/style.css
@@ -12,7 +12,7 @@
     height:50px;
     margin-right:50px;
 }
-.profile-img{
+.user-img{
     width:100%;
     height:100%;
     object-fit: contain;
