--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -5,23 +5,24 @@
 }
 .friend-item{
     margin:10px;
-    width:120px;
-    height:160px;
+    width:150px;
+    height:200px;
     color:white;
+    border: 10px;
+    box-shadow: 0 10px 15px 1px black;
 }
 .item-header{
-    border-radius:5px 5px 0 0;
     width:100%;
     height:30%;
-    background-color:orange;
+    background: rgb(18,16,47);
+    background: linear-gradient(118deg, rgba(18,16,47,1) 0%, rgba(48,48,75,1) 48%, rgba(0,212,255,1) 100%);
     display:flex;
     position:relative;
 }
 .item-footer{
-    margin-top:30px;
-    width:100%;
+    width:90%;
     height:70%;
-    border-radius:0 0 5px 5px;
+    margin:30px auto;
     color:black;
     display:flex;
     flex-direction: column;
@@ -37,4 +38,16 @@
     border:none;
     border-radius:50%;
     object-fit:cover;
+    box-shadow: 0 10px 15px 1px black;
+}
+.name{
+    font-weight:bold;
+    font-size:13px;
+}
+.sent-message{
+    border:none;
+    outline:none;
+    background-color:rgb(214, 230, 46);
+    font-weight:bold;
+    color:rgb(35, 36, 27);
 }
