--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -5,17 +5,16 @@
 }
 .friend-item{
     margin:10px;
-    width:150px;
-    height:200px;
+    width:200px;
+    height:300px;
     color:white;
     border: 10px;
-    box-shadow: 0 10px 15px 1px black;
+    box-shadow:0 10px 15px -7px black;
 }
 .item-header{
     width:100%;
     height:30%;
-    background: rgb(18,16,47);
-    background: linear-gradient(118deg, rgba(18,16,47,1) 0%, rgba(48,48,75,1) 48%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(118deg, rgba(159,159,159,1) 0%, rgba(74,74,106,1) 0%, rgba(0,212,255,1) 100%);
     display:flex;
     position:relative;
 }
@@ -33,12 +32,12 @@
     position:absolute;
     bottom:-20px;
     left:35%;
-    width:40px;
-    height:40px;
+    width:80px;
+    height:80px;
     border:none;
     border-radius:50%;
     object-fit:cover;
-    box-shadow: 0 10px 15px 1px black;
+    box-shadow:0 10px 15px -7px black;
 }
 .name{
     font-weight:bold;
@@ -47,7 +46,10 @@
 .sent-message{
     border:none;
     outline:none;
+    width:100%;
+    border-radius:20px;
     background-color:rgb(214, 230, 46);
     font-weight:bold;
     color:rgb(35, 36, 27);
+    text-decoration: none;
 }
