--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -5,23 +5,28 @@
 }
 .friend-item{
     margin:10px;
-    width:200px;
-    height:300px;
+    width:150px;
+    height:250px;
     color:white;
-    border: 10px;
+    border-radius: 20px;
     box-shadow:0 10px 15px -7px black;
 }
 .item-header{
     width:100%;
-    height:30%;
-    background: linear-gradient(118deg, rgba(159,159,159,1) 0%, rgba(74,74,106,1) 0%, rgba(0,212,255,1) 100%);
+    height:40%;
     display:flex;
     position:relative;
+    border-radius:20px 20px 0 0;
+}
+.item-background{
+    width:100%;
+    height:70%;
+    background: linear-gradient(118deg, rgba(159,159,159,1) 0%, rgba(74,74,106,1) 0%, rgba(0,212,255,1) 100%);
 }
 .item-footer{
     width:90%;
     height:70%;
-    margin:30px auto;
+    margin:0px auto;
     color:black;
     display:flex;
     flex-direction: column;
@@ -32,8 +37,8 @@
     position:absolute;
     bottom:-20px;
     left:35%;
-    width:80px;
-    height:80px;
+    width:50px;
+    height:50px;
     border:none;
     border-radius:50%;
     object-fit:cover;
