--- a/public/css/friend_list/style.css
+++ b/public/css/friend_list/style.css
@@ -16,11 +16,12 @@
     height:40%;
     display:flex;
     position:relative;
-    border-radius:20px 20px 0 0;
+
 }
 .item-background{
     width:100%;
     height:70%;
+    border-radius:20px 20px 0 0;
     background: linear-gradient(118deg, rgba(159,159,159,1) 0%, rgba(74,74,106,1) 0%, rgba(0,212,255,1) 100%);
 }
 .item-footer{
@@ -31,11 +32,10 @@
     display:flex;
     flex-direction: column;
     align-items:center;
-    justify-content: space-between;
 }
 .profile-img{
     position:absolute;
-    bottom:-20px;
+    bottom:10px;
     left:35%;
     width:50px;
     height:50px;
@@ -56,5 +56,10 @@
     background-color:rgb(214, 230, 46);
     font-weight:bold;
     color:rgb(35, 36, 27);
+    padding:5px 0;
+}
+.sent-message:hover{
     text-decoration: none;
+    color:white;
+    background-color:#232222;
 }
