--- a/public/css/friend-list.css
+++ b/public/css/friend-list.css
@@ -26,12 +26,13 @@
 }
 .item-footer{
     width:90%;
-    height:70%;
+    height:60%;
     margin:0px auto;
     color:black;
     display:flex;
     flex-direction: column;
     align-items:center;
+    justify-content: space-between;
 }
 .profile-img{
     position:absolute;
@@ -58,6 +59,7 @@
     color:rgb(35, 36, 27);
     padding:5px 0;
     text-align:center;
+    margin-bottom:10px;
 }
 .sent-message:hover{
     text-decoration: none;
