--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -5,3 +5,40 @@
     border-radius:20px;
 }
 
+.profile-header{
+    width:100%;
+    height:40%;
+    display:flex;
+    position:relative;
+}
+
+.profile-background{
+    width:100%;
+    height:70%;
+    border-radius:20px 20px 0 0;
+}
+.profile-footer{
+    width:90%;
+    height:60%;
+    margin:0px auto;
+    color:black;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-between;
+}
+.profile-img{
+    position:absolute;
+    bottom:10px;
+    left:35%;
+    width:50px;
+    height:50px;
+    border:none;
+    border-radius:50%;
+    object-fit:cover;
+    box-shadow:0 10px 15px -7px black;
+}
+.name{
+    font-weight:bold;
+    font-size:15px;
+}
