--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,9 +1,10 @@
 .profile-container{
-    width:200px;
-    height:300px;
+    width:300px;
+    height:400px;
     margin:50px auto;
     border-radius:20px;
     background-color:white;
+    box-shadow:0 10px 15px -7px black;
 }
 
 .profile-header{
@@ -18,6 +19,7 @@
     height:70%;
     border-radius:20px 20px 0 0;
     background-image: url('https://envato-shoebox-0.imgix.net/3510/c9ec-89aa-4295-8980-ae11584592eb/IMG_8993.jpg?auto=compress%2Cformat&fit=max&mark=https%3A%2F%2Felements-assets.envato.com%2Fstatic%2Fwatermark2.png&markalign=center%2Cmiddle&markalpha=18&w=1600&s=c50490c579370cd5e5c416a7b4f7774a');
+    background-size:cover;
 }
 .profile-footer{
     width:90%;
@@ -33,8 +35,8 @@
     position:absolute;
     bottom:10px;
     left:35%;
-    width:50px;
-    height:50px;
+    width:80px;
+    height:80px;
     border:none;
     border-radius:50%;
     object-fit:cover;
