--- a/public/css/friend-list.css
+++ b/public/css/friend-list.css
@@ -49,7 +49,7 @@
     font-weight:bold;
     font-size:13px;
 }
-.sent-message{
+.send-message{
     border:none;
     outline:none;
     width:100%;
