--- a/public/css/send-message.css
+++ b/public/css/send-message.css
@@ -22,16 +22,17 @@
     border-radius:50%;
 }
 
-.send-label{
+.send-name{
     position:absolute;
     background-color:black;
-    bottom:-5px;
+    width:60px;
+    bottom:-30px;
     color:white;
-    width:fit-content;
     padding:0 5px;
     display:none;
+    cursor:pointer
 }
-.send-label:hover{
+.send-img:hover .send-label{
     display:initial;
 }
 
