--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -3,7 +3,7 @@
     top:0;
     left:0;
     width:100%;
-    height:80%;
+    height:100vh;
     display:flex;
     flex-direction: column;
     background-color:#232222;
