--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,10 +3,11 @@ body{
     padding:0;
     font-family: Tahoma;
 }
-a{
-    color:black;
-    text-decoration: none;
-}
+/*a{*/
+/*    color:black;*/
+/*    text-decoration: none;*/
+/*}*/
+
 
 
 
@@ -21,4 +22,27 @@ a{
 .right{
     width:100%;
     background-color:pink;
+}
+.content{
+    width:80%;
+    margin:30px auto;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
