--- a/public/css/friend-list.css
+++ b/public/css/friend-list.css
@@ -54,13 +54,19 @@
     outline:none;
     width:100%;
     border-radius:20px;
-    background-color:rgb(214, 230, 46);
+    background-color: #23f2ff;
+    color:white;
     font-weight:bold;
-    color:rgb(35, 36, 27);
+
     padding:5px 0;
     text-align:center;
     margin-bottom:10px;
 }
+.send-message:hover{
+    text-decoration: none;
+    color:rgb(35, 36, 27);
+}
+
 .sent-message:hover{
     text-decoration: none;
     color:white;
@@ -70,4 +76,7 @@
 .text{
     font-size:14px;
     padding:10px;
+}
+.friend-list-button{
+    margin-top:10px;
 }
