--- a/public/css/search-input.css
+++ b/public/css/search-input.css
@@ -1,7 +1,7 @@
 .search-container{
     width:300px;
     height: 40px;
-    margin: 20px 0 0 20px;
+    /*margin: 20px 0 0 20px;*/
     border:0.2px solid lightblue;
     background:none;
     display: flex;
@@ -14,7 +14,18 @@
     cursor: pointer;
     color:white;
 }
-#search-bar
+#friend-search-bar
+{
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline:none;
+    background:none;
+    outline:none;
+    color:black;
+}
+
+#invite-search-bar
 {
     width: 100%;
     height: 100%;
