--- a/public/css/send-preview.css
+++ b/public/css/send-preview.css
@@ -1,3 +1,11 @@
+.send-preview-profile{
+    width:40px;
+    height:40px;
+    border-radius:50%;
+    padding:5px;
+    object-fit: contain;
+
+}
 .send-preview-container{
     display:flex;
 
@@ -16,8 +24,8 @@
 }
 .send-preview-img{
     border-radius:5px;
-    width:50px;
-    height:50px;
+    width:70px;
+    height:70px;
     object-fit: contain;
 }
 .send-preview-text{
