--- a/public/css/status-preview.css
+++ b/public/css/status-preview.css
@@ -9,7 +9,7 @@
 .send-preview-img{
     width:100%;
     height:200px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .send-preview-text{
     display:flex;
