--- a/public/css/header.css
+++ b/public/css/header.css
@@ -8,13 +8,13 @@
 }
 
 .profile{
-    width:50px;
-    height:50px;
+   display:flex;
+    align-items:center;
     margin-right:50px;
 }
 .user-img{
-    width:100%;
-    height:100%;
+    width:40px;
+    height:40px;
     object-fit: contain;
     border-radius:50%;
 }
