--- a/public/css/header.css
+++ b/public/css/header.css
@@ -11,6 +11,7 @@
    display:flex;
     align-items:center;
     margin-right:50px;
+    text-decoration: none;
 }
 .user-img{
     width:40px;
@@ -18,3 +19,10 @@
     object-fit: contain;
     border-radius:50%;
 }
+
+.profile-name{
+    color:white;
+
+}
+
+
