--- a/public/css/header.css
+++ b/public/css/header.css
@@ -13,6 +13,9 @@
     margin-right:50px;
     text-decoration: none;
 }
+.profile:hover{
+    text-decoration: none;
+}
 .user-img{
     width:40px;
     height:40px;
