--- a/public/css/header.css
+++ b/public/css/header.css
@@ -29,7 +29,7 @@
     position:absolute;
     top:50px;
     border-radius:5px;
-    width:70px;
+    width:150px;
     background-color:#232223;
     display:none;
 }
@@ -41,7 +41,13 @@
     border-right:5px solid transparent;
     border-left:5px solid transparent;
 }
+.menu-container{
+    display:flex;
+    width:100%;
+    align-items:center;
+}
 .menu-item{
+    width:100%;
     text-decoration: none;
     color:white;
 }
