--- a/public/css/header.css
+++ b/public/css/header.css
@@ -12,6 +12,7 @@
     align-items:center;
     margin-right:50px;
     position:relative;
+    cursor:pointer;
 }
 
 .user-img{
@@ -27,10 +28,8 @@
 
 .menu-dropdown{
     position:absolute;
-    top:50px;
-    border-radius:5px;
+    top:60px;
     width:150px;
-    background-color:#232223;
     display:none;
 }
 .arrow-up{
@@ -46,11 +45,14 @@
     flex-direction: column;
     width:100%;
     align-items:center;
+    background-color:#232223;
+    border-radius:5px;
 }
 .menu-item{
     width:100%;
     text-decoration: none;
     color:white;
+    text-align: center;
 }
 .menu-item:hover{
     text-decoration: none;
