--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,64 +1,84 @@
-.header{
-    width:100%;
-    height:80px;
-    background-color:#232222;
-    display:flex;
-    justify-content: flex-end;
-    align-items: center;
-}
+/*.header{*/
+/*    width:100%;*/
+/*    height:80px;*/
+/*    background-color:#232222;*/
+/*    display:flex;*/
+/*    justify-content: flex-end;*/
+/*    align-items: center;*/
+/*}*/
 
-.profile{
-   display:flex;
-    align-items:center;
-    margin-right:50px;
-    position:relative;
-    cursor:pointer;
-}
+/*.profile{*/
+/*   display:flex;*/
+/*    align-items:center;*/
+/*    margin-right:50px;*/
+/*    position:relative;*/
+/*    cursor:pointer;*/
+/*}*/
 
-.user-img{
-    width:40px;
-    height:40px;
-    object-fit: contain;
-    border-radius:50%;
-}
+/*.user-img{*/
+/*    width:40px;*/
+/*    height:40px;*/
+/*    object-fit: contain;*/
+/*    border-radius:50%;*/
+/*}*/
 
-.profile-name{
-    color:white;
-}
+/*.profile-name{*/
+/*    color:white;*/
+/*}*/
 
-.menu-dropdown{
-    position:absolute;
-    top:60px;
-    width:150px;
-    display:none;
-}
-.arrow-up{
-    margin-left:10px;
-    width:0;
-    height:0;
-    border-bottom: 5px solid #232223;
-    border-right:5px solid transparent;
-    border-left:5px solid transparent;
-}
-.menu-container{
-    display:flex;
-    flex-direction: column;
-    width:100%;
-    align-items:center;
-    background-color:#232223;
-    border-radius:5px;
-}
-.menu-item{
-    width:100%;
-    min-height:40px;
-    color:white;
-    display:flex;
-    align-items:center;
-    justify-content: center;
+/*.menu-dropdown{*/
+/*    position:absolute;*/
+/*    top:60px;*/
+/*    width:150px;*/
+/*    display:none;*/
+/*}*/
+/*.arrow-up{*/
+/*    margin-left:10px;*/
+/*    width:0;*/
+/*    height:0;*/
+/*    border-bottom: 5px solid #232223;*/
+/*    border-right:5px solid transparent;*/
+/*    border-left:5px solid transparent;*/
+/*}*/
+/*.menu-container{*/
+/*    display:flex;*/
+/*    flex-direction: column;*/
+/*    width:100%;*/
+/*    align-items:center;*/
+/*    background-color:#232223;*/
+/*    border-radius:5px;*/
+/*}*/
+/*.menu-item{*/
+/*    width:100%;*/
+/*    min-height:40px;*/
+/*    color:white;*/
+/*    display:flex;*/
+/*    align-items:center;*/
+/*    justify-content: center;*/
 
+/*}*/
+/*.menu-item:hover{*/
+/*    text-decoration: none;*/
+/*    color:white;*/
+/*    background-color:#23f2ff;*/
+/*}*/
+.header {
+    width: 100%;
+    height: 80px;
+    background-image: linear-gradient(to right, #9f78ff, #32cafe);
+    background-repeat: repeat-x;
+    position: fixed;
 }
-.menu-item:hover{
-    text-decoration: none;
-    color:white;
-    background-color:#23f2ff;
+.header-content {
+    margin-top: 80px;
+    width: 100%;
+    height: 80px;
+    background-image: linear-gradient(to right, #9f78ff, #32cafe);
+    background-repeat: repeat-x;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+.header-content-item {
+    margin: 0 20px;
 }
