--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,18 +12,20 @@ a{
     text-decoration: none;
 }
 
-
+a:hover,a:focus{
+    text-decoration:none !important;
+}
 
 .big-container{
     display:flex;
 }
-.left{
-    width:300px;
-    height:100vh;
+.left {
+    width: 320px;
+    /* height: 100vh; */
 }
-.right{
-    width:100%;
-    background-color:pink;
+.right {
+    width: 100%;
+    position: relative;
 }
 .content{
     width:80%;
