--- a/public/css/header.css
+++ b/public/css/header.css
@@ -29,11 +29,11 @@
     position:absolute;
     top:50px;
     right:0;
-    width:200px;
+    width:190px;
     display:none;
 }
 .arrow-up{
-    margin-left:120px;
+    margin-left:160px;
     width:0;
     height:0;
     border-bottom: 10px solid white;
@@ -60,10 +60,9 @@
 }
 .menu-item{
     width:100%;
-    padding:10px 20px;
+    padding:10px;
     display:flex;
     align-items:center;
-    justify-content: space-between;
     color:black;
 }
 .icon{
