--- a/public/css/header.css
+++ b/public/css/header.css
@@ -61,12 +61,12 @@
     border-bottom:0.5px solid lightblue;
 }
 .online-dot{
-    width:5px;
-    height:5px;
-    background-color: #27fa27;
+    width:7px;
+    height:7px;
+    background-color: #5ed84f;
     position:absolute;
-    right:5px;
-    bottom:5px;
+    right:3px;
+    bottom:3px;
 }
 .menu-item{
     width:100%;
