--- a/public/css/oa-dashboard.css
+++ b/public/css/oa-dashboard.css
@@ -1,6 +1,7 @@
 .oa-dashboard{
     width:40%;
     margin:0 auto;
+    position:relative;
     background-color:white;
     border-radius:5px;
     box-shadow: 0 0 10px rgb(0 0 0 / 12%);
