--- a/public/css/article-select.css
+++ b/public/css/article-select.css
@@ -11,20 +11,24 @@
 }
 
 .article-container{
-    width:100%;
+    width:80%;
     display:flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .article-item{
-    width:200px;
+    width:250px;
     height:300px;
     border-radius:10px;
     border:1px solid lightblue;
     display:flex;
     flex-direction: column;
     align-items: center;
+    cursor:pointer;
+}
+.article-item:hover, .article-item:hover > .article-item-circle{
+    border:1px solid orange;
 }
 
 .article-item-circle{
