--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -2,6 +2,10 @@
     display:flex;
     justify-content:space-between;
     width:100%;
+    margin:10px auto;
+    border-radius:5px;
+    border:1px solid lightgreen;
+    padding:10x;
 }
 
 .left-content{
@@ -17,4 +21,8 @@
 .inline-form{
     display:flex;
     justify-content: space-between;
+    width:95%;
+}
+.form-control{
+    width:80% !important;
 }
