--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -5,7 +5,7 @@
     margin:10px auto;
     border-radius:5px;
     border:1px solid lightgreen;
-    padding:10x;
+    padding:10px;
 }
 
 .left-content{
