--- a/public/css/video-article.css
+++ b/public/css/video-article.css
@@ -20,7 +20,10 @@
 .photo-text {
     font-weight: normal;
 }
-
+.icon {
+    font-size: 40px;
+    color: rgb(65, 194, 236);
+}
 .cover-photo {
     width: 90%;
     height: 200px;
@@ -30,4 +33,5 @@
     justify-content: center;
     border-style: ridge;
     cursor: pointer;
+    text-align: center;
 }
