--- a/public/css/video-article.css
+++ b/public/css/video-article.css
@@ -34,4 +34,23 @@
     border-style: ridge;
     cursor: pointer;
     text-align: center;
+    position: relative;
+}
+
+.cover-image {
+    display: none;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cover-change {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    display: none;
 }
