--- a/public/css/video-article.css
+++ b/public/css/video-article.css
@@ -5,8 +5,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-style: ridge;
+    border-style: dashed;
+    border-color: coral;
+    border-width: thin;
     cursor: pointer;
+    position: relative;
 }
 .photo-icon {
     font-size: 20px;
@@ -31,20 +34,40 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-style: ridge;
+    border-style: dashed;
+    border-color: coral;
+    border-width: thin;
     cursor: pointer;
     text-align: center;
     position: relative;
 }
 
-.cover-image {
+#cover-image {
     display: none;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
+.hasImg:hover > .cover-change {
+    display: initial;
+}
 .cover-change {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    display: none;
+}
+.video-player {
+    width: 100%;
+    height: 100%;
+    display: none;
+    object-fit: cover;
+}
+.video-change {
     position: absolute;
     top: 5px;
     left: 5px;
