--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -54,27 +54,23 @@
 .image-button {
     width: 30%;
     background-color: none;
+    border: none;
+    outline: none;
 }
 .active-button {
     border-radius: 5px 5px 0 0;
     background-color: white;
+    border-bottom: none;
 }
 .cover-content {
     width: 100%;
 }
 .select-content {
     width: 100%;
-    width: 200px;
+    height: 160px;
     background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-style: dashed;
-    border-color: lightblue;
-    border-width: thin;
-    cursor: pointer;
-    position: relative;
 }
 .image-info {
     width: 95%;
@@ -130,4 +126,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.image-content {
+    display: none;
 }
