--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -48,14 +48,14 @@
 
 .video-button {
     width: 40%;
-    background-color: none;
+    background: none;
     border: none;
     outline: none;
 }
 
 .image-button {
     width: 40%;
-    background-color: none;
+    background: none;
     border: none;
     outline: none;
 }
