--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -55,6 +55,7 @@
 
 .image-button {
     width: 40%;
+    height: 50px;
     background: none;
     border: none;
     outline: none;
@@ -74,6 +75,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .image-info {
     width: 95%;
@@ -133,4 +135,8 @@
 
 .image-content {
     display: none;
+}
+
+.image-input {
+    margin: 5px auto;
 }
