--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -66,6 +66,7 @@
     background-color: white;
     border: 1px solid lightblue;
     border-bottom: none;
+    height: 100%;
 }
 .cover-content {
     width: 100%;
