--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -160,3 +160,32 @@
 .image-input {
     margin: 5px auto;
 }
+
+.icon {
+    font-size: 40px;
+    color: rgb(65, 194, 236);
+}
+
+.video-popup {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 80%;
+    height: 600px;
+    background-color: white;
+}
+.close-video-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 10px;
+    height: 10px;
+    color: black;
+}
+
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
