--- a/public/css/create-article.css
+++ b/public/css/create-article.css
@@ -189,3 +189,9 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.video-thumb {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
