--- a/public/css/oa-dashboard.css
+++ b/public/css/oa-dashboard.css
@@ -1,40 +1,42 @@
-.oa-dashboard{
-    width:30%;
-    margin:0 auto;
-    position:relative;
-    background-color:white;
-    border-radius:5px;
+.oa-dashboard {
+    width: 30%;
+    margin: 0 auto;
+    position: relative;
+    background-color: white;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgb(0 0 0 / 12%);
     color: #464855;
 }
-.oa-dashboard-header{
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
+
 .oa-dashboard-name {
-    font-size: 1.42rem;
+    font-size: 1.6rem;
     font-weight: 700;
     letter-spacing: 0.05rem;
 }
 .oa-dashboard-sub-name {
     font-size: 1.05rem;
     letter-spacing: 0.05rem;
+    color: #464855;
 }
 
-.image-container{
+.image-container {
     width: 100%;
-    height: 150px;
-    position: relative;
+    height: 200px;
 }
 .background-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 .oa-image {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     object-fit: cover;
     position: absolute;
