--- a/public/css/oa-dashboard.css
+++ b/public/css/oa-dashboard.css
@@ -1,5 +1,6 @@
 .oa-dashboard {
-    width: 30%;
+    width: 40%;
+    padding: 10px;
     margin: 0 auto;
     position: relative;
     background-color: white;
@@ -39,9 +40,21 @@
     height: 60px;
     border-radius: 50%;
     object-fit: cover;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
     border: 2px solid lightgreen;
     box-shadow: 0 0 10px rgb(0 0 0 / 12%);
+}
+
+.oa-info {
+    font-size: 1.6rem;
+}
+
+.oa-sub-container {
+    width: 90%;
+    padding: 10px;
+    border-style: dashed;
+    border-color: coral;
+    border-width: thin;
+    cursor: pointer;
+    text-align: center;
+    position: relative;
 }
