--- a/public/css/article.css
+++ b/public/css/article.css
@@ -1,5 +1,13 @@
-.article-image{
-    width:80px;
-    height:40px;
+.article-image {
+    width: 80px;
+    height: 40px;
     object-fit: cover;
+}
+
+.article-header {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
