--- a/public/css/article.css
+++ b/public/css/article.css
@@ -15,3 +15,15 @@
 .article-header-left {
     display: flex;
 }
+.search {
+    width: 230px;
+    margin: 0 10px;
+    border-radius: 5px;
+    border: 1px solid green;
+    padding: 5px;
+    color: #464855;
+    outline: none;
+}
+.total {
+    margin: 0;
+}
