--- a/public/css/header.css
+++ b/public/css/header.css
@@ -6,103 +6,104 @@
 /*    justify-content: flex-end;*/
 /*    align-items: center;*/
 /*}*/
-.profile{
-   display:flex;
-    width:40px;
-    height:40px;
-    align-items:center;
-    margin-right:50px;
-    position:relative;
-    cursor:pointer;
+.profile {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    margin-right: 50px;
+    position: relative;
+    cursor: pointer;
 }
 
-.user-img{
-    width:100%;
-    height:100%;
+.user-img {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
-    border-radius:50%;
+    border-radius: 50%;
 }
 
-.user-img-2{
-    width:35px;
-    height:35px;
+.user-img-2 {
+    width: 35px;
+    height: 35px;
     object-fit: contain;
-    border-radius:50%;
+    border-radius: 50%;
 }
 
-.profile-name{
-    color:white;
+.profile-name {
+    color: white;
 }
 
-.menu-dropdown{
-    position:absolute;
-    top:50px;
-    right:0;
-    width:190px;
-    display:none;
+.menu-dropdown {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 190px;
+    display: none;
 }
-.arrow-up{
-    margin-left:160px;
-    width:0;
-    height:0;
+.arrow-up {
+    margin-left: 160px;
+    width: 0;
+    height: 0;
     border-bottom: 10px solid white;
-    border-right:10px solid transparent;
-    border-left:10px solid transparent;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
 }
-.menu-container{
-    display:flex;
+.menu-container {
+    display: flex;
     flex-direction: column;
-    width:100%;
-    align-items:center;
-    background-color:white;
+    width: 100%;
+    align-items: center;
+    background-color: white;
     box-shadow: 0 0 10px rgb(0 0 0 / 12%);
-    border-radius:5px;
-    color:black;
+    border-radius: 5px;
+    color: black;
 }
-.menu-header{
-    width:100%;
-    padding:20px;
-    display:flex;
+.menu-header {
+    width: 100%;
+    padding: 20px;
+    display: flex;
     align-items: center;
     justify-content: space-around;
-    border-bottom:0.5px solid lightblue;
+    border-bottom: 0.5px solid lightblue;
 }
-.online-dot{
-    width:8px;
-    height:8px;
+.online-dot {
+    width: 8px;
+    height: 8px;
     background-color: #5ed84f;
-    position:absolute;
-    border:1px solid black;
-    right:1px;
-    bottom:3px;
-    border-radius:50%;
+    position: absolute;
+    border: 1px solid black;
+    right: 1px;
+    bottom: 3px;
+    border-radius: 50%;
 }
-.menu-item{
-    width:100%;
-    padding:10px;
-    display:flex;
-    align-items:center;
-    color:black;
+.menu-item {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    color: black;
 }
-.icon{
-    margin:0 20px;
+.icon {
+    margin: 0 20px;
     color: transparent;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
-.menu-item:hover{
-    color:grey;
+.menu-item:hover {
+    color: grey;
 }
 .header {
     width: inherit;
-    max-width:inherit;
+    max-width: inherit;
     height: 80px;
     background-image: linear-gradient(to right, #9f78ff, #32cafe);
     background-repeat: repeat-x;
     position: fixed;
-    display:flex;
+    display: flex;
     justify-content: flex-end;
     align-items: center;
+    z-index: 5;
 }
 .header-content {
     margin-top: 80px;
