--- a/public/css/article.css
+++ b/public/css/article.css
@@ -49,6 +49,13 @@
     background-color: white;
     box-shadow: 0 10px 15px -7px black;
 }
-.create-article {
-    float: right;
+.article-header-right {
+    width: 300px;
+}
+
+.article-head {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    border-bottom: 1px solid lightblue;
 }
