--- a/public/css/article.css
+++ b/public/css/article.css
@@ -50,12 +50,13 @@
     box-shadow: 0 10px 15px -7px black;
 }
 .article-header-right {
-    width: 300px;
+    width: 200px;
 }
 
 .article-head {
     width: 100%;
     display: flex;
-    align-items: flex-end;
+    justify-content: flex-end;
+    margin: 10px 0;
     border-bottom: 1px solid lightblue;
 }
