--- a/public/css/follower.css
+++ b/public/css/follower.css
@@ -26,3 +26,10 @@ td {
 .total {
     margin: 0;
 }
+.follower-footer {
+    border-top: 1px solid lightblue;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
