--- a/public/css/paginate.css
+++ b/public/css/paginate.css
@@ -1,4 +1,5 @@
 .paginate-container {
+    margin: 10px 0;
     display: flex;
     align-items: center;
 }
@@ -11,6 +12,7 @@
     justify-content: center;
     background-color: white;
     border: 1px solid lightblue;
+    font-weight: bold;
 }
 .current-page {
     width: 30px;
@@ -21,4 +23,5 @@
     justify-content: center;
     background-color: #bac9d6;
     border: 1px solid lightblue;
+    font-weight: bold;
 }
