--- a/public/css/article.css
+++ b/public/css/article.css
@@ -73,3 +73,19 @@
     align-items: center;
     justify-content: space-between;
 }
+.tab-button {
+    border: none;
+    outline: none;
+    background: none;
+}
+
+.article-tab {
+    display: flex;
+}
+
+.selected-tab {
+    border-radius: 5px;
+    border-bottom: none;
+    outline: none;
+    border: 1px solid lightblue;
+}
