--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
-body{
-    margin:0;
-    padding:0;
+body {
+    margin: 0;
+    padding: 0;
     font-family: Tahoma;
 }
 /*a{*/
@@ -8,16 +8,17 @@ body{
 /*    text-decoration: none;*/
 /*}*/
 
-a{
+a {
     text-decoration: none;
 }
 
-a:hover,a:focus{
-    text-decoration:none !important;
+a:hover,
+a:focus {
+    text-decoration: none !important;
 }
 
-.big-container{
-    display:flex;
+.big-container {
+    display: flex;
 }
 .left {
     width: 320px;
@@ -25,12 +26,12 @@ a:hover,a:focus{
 }
 .right {
     width: 100%;
-    max-width:1098px;
+    max-width: 1098px;
     position: relative;
 }
-.content{
-    width:80%;
-    margin:30px auto;
+.content {
+    width: 80%;
+    margin: 30px auto;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -50,4 +51,7 @@ a:hover,a:focus{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+.daterangepicker {
+    min-width: 600px !important;
 }
