--- a/public/css/broadcast.css
+++ b/public/css/broadcast.css
@@ -117,6 +117,11 @@
     align-items: center;
     justify-content: space-between;
 }
-.send-broadcast{
-    float:right;
+.send-broadcast {
+    float: right;
+}
+.selected {
+    background-color: rgb(216, 174, 255);
+    color: black;
+    font-weight: bold;
 }
